Completed all sections

--- a/index.html
+++ b/index.html
@@ -10,18 +10,199 @@
 </head>
 
 <body>
-    <!-- Hero Section -->
-<section class="hero d-flex align-items-center">
-<div class="container col-xl-12 px-1 mx-1 hero-content" id="hero">
-    <div class="row flex-lg-row-reverse align-items-center g-5 py-2">
-        <div class="col-lg-11">
-            <h1 class="title display-2 fw-bold text-body-light lh-2 mb-3 mx-5 px-1">HARSHINI PATALAM</h1>
-            <p class="tagline mx-5 px-1 fw-bold">I'm Harshini Patalam, a full-stack developer. <br>
-            I build beautiful and intuitive web applications <br>while actively exploring the potential of AI. </p>
-        </div>
+    <!--Header -->
+    <div class="container">
+        <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom"> <a href="/"
+                class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"> <svg
+                    class="bi me-2" width="40" height="32" aria-hidden="true">
+                    <use xlink:href="#bootstrap"></use>
+                </svg> <span class="title3 fw-bold">Portfolio Website</span> </a>
+            <ul class="nav nav-pills navbartitle d-flex align-items-center">
+                <li class="nav-item"><a href="#" class="nav-link fw-bold">Home Page</a></li>
+                <li class="nav-item"><a href="#" class="nav-link fw-bold">Skills</a></li>
+                <li class="nav-item"><a href="#" class="nav-link fw-bold">Projects</a></li>
+                <li class="nav-item"><a href="#" class="nav-link fw-bold">Education</a></li>
+            </ul>
+        </header>
     </div>
-</div>
-</section>
+
+
+    <!-- Hero Section -->
+    <section class="hero d-flex align-items-center">
+        <div class="container col-lg-12 px-1 mx-1 hero-content" id="hero">
+            <div class="row flex-lg-row-reverse align-items-center g-5 py-2">
+                <div class="col-lg-11">
+                    <h1 class="title display-2 fw-bold text-body-light lh-2 mb-3 mx-5 px-1">HARSHINI PATALAM</h1>
+                    <p class="tagline mx-5 px-1 fw-bold">I'm a full-stack developer with a passion in coding :3 <br>
+                        I build beautiful and intuitive web applications <br>while actively exploring the potential of
+                        AI. </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Skills Section -->
+    <section class="skills mt-5 mb-5 pb-3 pt-3">
+        <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
+            <h1 class="title2 display-5 fw-bold text-body-light">Technical Skills</h1>
+        </div>
+        <div class="row row-cols-1 row-cols-md-3 mb-3 text-center px-5">
+            <div class="col">
+                <div class="card mb-4 rounded-3 shadow-sm border-dark">
+                    <div class="card-header py-3 text-bg-dark border-dark">
+                        <h4 class="my-0 fw-bold">Front-End Development</h4>
+                    </div>
+                    <div class="card-body">
+                        <ul class="list-unstyled mt-3 mb-4">
+                            <li>HTML5</li>
+                            <li>CSS3</li>
+                            <li>JavaScript</li>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card mb-4 rounded-3 shadow-sm border-dark">
+                    <div class="card-header py-3 text-bg-dark border-dark">
+                        <h4 class="my-0 fw-bold">Programming Languages</h4>
+                    </div>
+                    <div class="card-body">
+                        </h1>
+                        <ul class="list-unstyled mt-3 mb-4">
+                            <li>Java</li>
+                            <li>C</li>
+                            <li>SQL</li>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card mb-4 rounded-3 shadow-sm border-dark">
+                    <div class="card-header py-3 text-bg-dark border-dark">
+                        <h4 class="my-0 fw-bold">Developer Tools & Platforms</h4>
+                    </div>
+                    <div class="card-body">
+                        </h1>
+                        <ul class="list-unstyled mt-3 mb-4 fw-normal">
+                            <li>Git & GitHub</li>
+                            <li>AWS</li>
+                            <li>Canva</li>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Projects Section -->
+    <section class="projects">
+        <div class="album py-5 bg-body-tertiary">
+            <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
+                <h1 class="title2 display-5 fw-bold text-body-dark">Completed Projects</h1>
+            </div>
+            <div class="container">
+                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+                    <div class="col">
+                        <div class="card shadow-sm"> <svg aria-label="Placeholder: Thumbnail"
+                                class="bd-placeholder-img card-img-top" height="225"
+                                preserveAspectRatio="xMidYMid slice" role="img" width="100%"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <title>Placeholder</title>
+                                <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%"
+                                    fill="#eceeef" dy=".3em">Thumbnail</text>
+                            </svg>
+                            <div class="card-body">
+                                <p class="card-text">This is a wider card with supporting text below as a natural
+                                    lead-in to
+                                    additional content. This content is a little bit longer.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card shadow-sm"> <svg aria-label="Placeholder: Thumbnail"
+                                class="bd-placeholder-img card-img-top" height="225"
+                                preserveAspectRatio="xMidYMid slice" role="img" width="100%"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <title>Placeholder</title>
+                                <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%"
+                                    fill="#eceeef" dy=".3em">Thumbnail</text>
+                            </svg>
+                            <div class="card-body">
+                                <p class="card-text">This is a wider card with supporting text below as a natural
+                                    lead-in to
+                                    additional content. This content is a little bit longer.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card shadow-sm"> <svg aria-label="Placeholder: Thumbnail"
+                                class="bd-placeholder-img card-img-top" height="225"
+                                preserveAspectRatio="xMidYMid slice" role="img" width="100%"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <title>Placeholder</title>
+                                <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%"
+                                    fill="#eceeef" dy=".3em">Thumbnail</text>
+                            </svg>
+                            <div class="card-body">
+                                <p class="card-text">This is a wider card with supporting text below as a natural
+                                    lead-in to
+                                    additional content. This content is a little bit longer.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card shadow-sm"> <svg aria-label="Placeholder: Thumbnail"
+                                class="bd-placeholder-img card-img-top" height="225"
+                                preserveAspectRatio="xMidYMid slice" role="img" width="100%"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <title>Placeholder</title>
+                                <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%"
+                                    fill="#eceeef" dy=".3em">Thumbnail</text>
+                            </svg>
+                            <div class="card-body">
+                                <p class="card-text">This is a wider card with supporting text below as a natural
+                                    lead-in to
+                                    additional content. This content is a little bit longer.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card shadow-sm"> <svg aria-label="Placeholder: Thumbnail"
+                                class="bd-placeholder-img card-img-top" height="225"
+                                preserveAspectRatio="xMidYMid slice" role="img" width="100%"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <title>Placeholder</title>
+                                <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%"
+                                    fill="#eceeef" dy=".3em">Thumbnail</text>
+                            </svg>
+                            <div class="card-body">
+                                <p class="card-text">This is a wider card with supporting text below as a natural
+                                    lead-in to
+                                    additional content. This content is a little bit longer.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card shadow-sm"> <svg aria-label="Placeholder: Thumbnail"
+                                class="bd-placeholder-img card-img-top" height="225"
+                                preserveAspectRatio="xMidYMid slice" role="img" width="100%"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <title>Placeholder</title>
+                                <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%"
+                                    fill="#eceeef" dy=".3em">Thumbnail</text>
+                            </svg>
+                            <div class="card-body">
+                                <p class="card-text">This is a wider card with supporting text below as a natural
+                                    lead-in to
+                                    additional content. This content is a little bit longer.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        </div>
+    </section>
+
+    <!-- Education Section -->
+     
 
 </body>
 
