--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="style.css">
     <title>Harshini Patalam Portfolio Website</title>
 </head>
@@ -202,8 +204,89 @@
     </section>
 
     <!-- Education Section -->
-     
+    <section class="education pt-5 mt-5">
+        <div class="container">
+            <div class="pricing-header p-3 md-4 mx-auto text-center">
+                <h1 class="title2 display-5 fw-bold text-body-dark">Education Timeline</h1>
+            </div>
+        <div class="main-timeline">
+                        <!-- start experience section-->
+                        <div class="timeline">
+                            <div class="icon"></div>
+                            <div class="date-content">
+                                <div class="date-outer">
+                                    <span class="date">
+                                    <span class="year">2027</span>
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="timeline-content">
+                                <h5 class="title3">Bachelors in Technology</h5>
+                                <p class="description fw-bold">
+                                    Information Technology <br>
+                                    VNR Vignana Jyothi Institute of Engineering & Technology <br>
+                                    CGPA: 8.65
+                                </p>
+                            </div>
+                        </div>
+                        <!-- end experience section-->
 
+                        <!-- start experience section-->
+                        <div class="timeline">
+                            <div class="icon"></div>
+                            <div class="date-content">
+                                <div class="date-outer">
+                                    <span class="date">
+                                    <span class="year">2023</span>
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="timeline-content">
+                                <h5 class="title3">Junior College</h5>
+                                <p class="description fw-bold">
+                                    FIITJEE Junior College, Grade: 94%
+                                </p>
+                            </div>
+                        </div>
+                        <!-- end experience section-->
+
+                        <!-- start experience section-->
+                        <div class="timeline">
+                            <div class="icon"></div>
+                            <div class="date-content">
+                                <div class="date-outer">
+                                    <span class="date">
+                                    <span class="year">2021</span>
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="timeline-content">
+                                <h5 class="title3">High School</h5>
+                                <p class="description fw-bold">
+                                    Jubilee Hills Public School, Grade: 96%
+                                </p>
+                            </div>
+                        </div>
+                        <!-- end experience section-->
+
+                    </div>
+                </div>
+
+            </section>
+
+
+        <!--Footer Section-->
+    <div class="container">
+        <footer class="py-3 my-4">
+            <ul class="nav justify-content-center border-bottom border-bt pb-3 mb-3">
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-light fw-bold">Linkedin</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-light fw-bold">GitHub</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-light fw-bold">Resume</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-light fw-bold">Contact Me</a></li>
+            </ul>
+            <p class="text-center text-body-light">© 2025, Capstone Project-2</p>
+        </footer>
+    </div>
 </body>
 
 </html>
